k8s/azure-templated/admin-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: admin
  namespace: external
  annotations:
    kubernetes.io/ingress.class: "addon-http-application-routing"
spec:
  rules:
  - host: admin.CLUSTER_PUBLIC_URL
    http:
      paths:
      - path: /api
        backend:
         serviceName: adminapigateway
         servicePort: 80
      - path: /
        backend:
          serviceName: adminfront
          servicePort: 80
